syntax = "proto3";

package marketdata.v1;

option go_package = "github.com/castlemilk/shorted.com.au/services/gen/proto/go/marketdata/v1;marketdatav1";

import "google/protobuf/timestamp.proto";

// MarketDataService provides access to stock price data
service MarketDataService {
  // Get latest price for a single stock
  rpc GetStockPrice(GetStockPriceRequest) returns (GetStockPriceResponse);
  
  // Get historical prices for a stock
  rpc GetHistoricalPrices(GetHistoricalPricesRequest) returns (GetHistoricalPricesResponse);
  
  // Get latest prices for multiple stocks
  rpc GetMultipleStockPrices(GetMultipleStockPricesRequest) returns (GetMultipleStockPricesResponse);
  
  // Get correlation matrix for stocks
  rpc GetStockCorrelations(GetStockCorrelationsRequest) returns (GetStockCorrelationsResponse);
}

message StockPrice {
  string stock_code = 1;
  google.protobuf.Timestamp date = 2;
  double open = 3;
  double high = 4;
  double low = 5;
  double close = 6;
  int64 volume = 7;
  double adjusted_close = 8;
  double change = 9;
  double change_percent = 10;
}

message GetStockPriceRequest {
  string stock_code = 1;
}

message GetStockPriceResponse {
  StockPrice price = 1;
}

message GetHistoricalPricesRequest {
  string stock_code = 1;
  string period = 2; // 1d, 1w, 1m, 3m, 6m, 1y, 2y
  string interval = 3; // 1m, 5m, 15m, 30m, 1h, 1d (optional)
}

message GetHistoricalPricesResponse {
  repeated StockPrice prices = 1;
}

message GetMultipleStockPricesRequest {
  repeated string stock_codes = 1;
}

message GetMultipleStockPricesResponse {
  map<string, StockPrice> prices = 1;
}

message GetStockCorrelationsRequest {
  repeated string stock_codes = 1;
  string period = 2; // 1m, 3m, 6m, 1y
}

message CorrelationRow {
  map<string, double> correlations = 1;
}

message GetStockCorrelationsResponse {
  map<string, CorrelationRow> correlations = 1;
  int32 data_points = 2; // Number of data points used in calculation
}